[james] replace Lists.of with Arrays.asList as it is from java 9